--- a/Mongolian.bundle/Contents/Info.plist
+++ b/Mongolian.bundle/Contents/Info.plist
@@ -13,7 +13,7 @@
 		<key>TISInputSourceID</key>
 		<string>org.sil.ukelele.keyboardlayout.mongolian.mongolian</string>
 		<key>TISIntendedLanguage</key>
-		<string>en-JP</string>
+		<string>xgn-Mong-MN</string>
 	</dict>
 </dict>
 </plist>
